marqueur direct dans la map et tracker